# ctrlnnmod

./: .gitignore  LICENSE  README.md  Tuto_pendule.ipynb  example_pendulum.py  load_dataset.py  main.py  main_dd.py  main_test.ipynb  pendulum_example.py  pyproject.toml  requirements.txt  setup.py  testdd.py
.github/workflows/: ci.yml
ctrl_nmod/: __init__.py  constraints.py  layers.py
ctrl_nmod/integrators/: __init__.py  integrators.py
ctrl_nmod/layers/: __init__.py  layers.py  liplayers.py  paramlincont.py  paramlindisc.py
ctrl_nmod/linalg/: matrices.py  utils.py
ctrl_nmod/lmis/: __init__.py  base.py  h2.py  hinf.py  lfr.py  lipschitz.py  lmis.py  lyap.py
ctrl_nmod/losses/: __init__.py  losses.py  regularizations.py  test_losses.py
ctrl_nmod/matlab/: __init__.py  matlabfcn.py
ctrl_nmod/optim/: pgd.py  (+2 more)
ctrlnmod/: __init__.py
docs/: api.html  conf.py  ctrlnmod.integrators.rst  ctrlnmod.layers.rst  ctrlnmod.linalg.rst  ctrlnmod.lmis.rst  ctrlnmod.matlab.rst  ctrlnmod.models.feedforward.rst  ctrlnmod.models.ssmodels.continuous.linear.rst  ctrlnmod.models.ssmodels.continuous.rst  ctrlnmod.optim.rst  ctrlnmod.plot.rst  ctrlnmod.postprocessing.rst  ctrlnmod.preprocessing.rst  ctrlnmod.train.rst  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js
geotorch_custom/: __init__.py  constraints.py  fixedrank.py  lyap.py  pssdfixedrank.py  pssdfixedranktrace.py  skew.py  symmetric.py
nssmid/: README.md  evaluate.py  layers.py  linalg_utils.py  lmis.py  losses.py  postprocessing.py  preprocessing.py  ss_integrators.py  ss_models.py  train.py
tests/: __init__.py  conftest.py  test_experiments.py  test_h2.py  test_hinf.py  test_import.py  test_logdet.py  test_losses.py  test_regularizations.py
(+220 files in other folders)
